<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_hello_world</name>
  <version>0.0.0</version>
  <description>Assignment: Basic Hello World Node</description>

  <maintainer email="student@university.edu">Student Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependency (MISSING earlier) -->
  <depend>rclcpp</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend
